--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RnVesperSdkExample</string>
+    <string name="vesper_cast_receiver_id"></string>
 </resources>
